--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,21 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cra-template": "1.2.0",
     "framer-motion": "^10.16.16",
     "papaparse": "^5.4.1",
     "primereact": "^10.2.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
-    "tailwind": "^4.0.0"
+    "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
