--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cra-template": "1.2.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "papaparse": "^5.4.1",
     "primereact": "^10.2.1",
