--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     },
     {
       "src": "Image.jpg",
-      "type": "image/png",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
       "src": "Image.jpg",
-      "type": "image/png",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
